--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,11 +1,4 @@
 .page {
-  --text-primary: #000;
-  --text-secondary: #666;
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-  --button-secondary-border: #ebebeb;
-
   min-height: 100vh;
   height: 100vh;
   display: flex;
@@ -29,31 +22,16 @@
   padding: 120px 60px;
 }
 
-@media (max-width: 600px) {
-  .main {
-    padding: 48px 24px;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
-
-  .page {
-    --text-primary: #ededed;
-    --text-secondary: #999;
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-    --button-secondary-border: #1a1a1a;
-  }
-}
-
 .table_entry {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   padding: 5px;
+}
+
+@media (max-width: 600px) {
+  .main {
+    padding: 48px 24px;
+  }
 }
