--- a/src/app/player/[slug]/player.module.css
+++ b/src/app/player/[slug]/player.module.css
@@ -1,17 +1,4 @@
 .page {
-  --background: #fff;
-  --foreground: #000;
-  --primary: #2650aa;
-  --primary-light: #3b6edc;
-  --primary-contrast: #fff;
-
-  --text-primary: #000;
-  --text-secondary: #666;
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-  --button-secondary-border: #ebebeb;
-
   min-height: 100vh;
   height: 100vh;
   display: flex;
@@ -25,6 +12,8 @@
 .main {
   display: flex;
   min-height: calc(100vh - var(--header-height));
+  max-height: calc(100vh - var(--header-height));
+  overflow: scroll;
   width: 100%;
   max-width: 800px;
   flex-direction: column;
@@ -53,22 +42,13 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
-
-  .page {
-    --background: #000;
-    --foreground: #fff;
-
-    --text-primary: #ededed;
-    --text-secondary: #999;
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-    --button-secondary-border: #1a1a1a;
-  }
+.section {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding-bottom: 10px;
 }
 
 .line {
